--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://piyushpp07.github.io/Cart-a",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +14,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
